# Orion

./: .gitignore  Makefile  README.md  mkdocs.yml  profile.stats  pyproject.toml
docs/: contributing.md  index.md
docs/api/: betelgeuse.md  nebula_orion.md
docs/api/betelgeuse/: betelgeuse.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/modules/: betelgeuse.md  overview.md
docs/roadmaps/: betelgeuse-roadmap.md
docs/stylesheets/: extra.css
docs/tutorials/: basic-usage.md  notion-setup.md  pages.md
scripts/: add_issues_to_project.sh  betelgeuse_issues.csv  create_github_issues.py  welcome_orion.py
scripts/betelgeuse/: manual_test_client.py  test_inter1_manual.py  test_iter1_manual.py  test_iter2_manual.py  test_iter3_manual.py
src/nebula_orion/: __init__.py  log_config.py  main.py
src/nebula_orion/betelgeuse/: __init__.py  client.py  config.py  constants.py  errors.py
src/nebula_orion/betelgeuse/api/: __init__.py  base.py  blocks.py
src/nebula_orion/betelgeuse/auth/: __init__.py  token.py
src/nebula_orion/betelgeuse/blocks/: __init__.py  text.py
src/nebula_orion/betelgeuse/models/: __init__.py  base.py  block.py  common.py  database.py  page.py
tests/: test_core.py  test_setup.py
tests/betelgeuse/: test_client.py  test_config.py
tests/betelgeuse/api/: test_base_api.py
tests/betelgeuse/auth/: test_token.py
tests/betelgeuse/models/: test_base_model.py  test_database_model.py  test_page_model.py
tests/integration/: test_integration_client_init.py  test_integration_read.py
typings/coloredlogs/: __init__.pyi  cli.pyi  demo.pyi  syslog.pyi  tests.pyi
typings/coloredlogs/converter/: __init__.pyi  colors.pyi
