[project]
name = "nebula-orion"
version = "0.1.0"
description = "Orion Python Library"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Gishant", email = "khiladisngh@hotmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["notion", "api", "workspace", "management", "automation"]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.10.6",
    "requests>=2.32.3",
]


[project.urls]
Homepage = "https://github.com/nebulae-official/Orion"
Documentation = "https://orion.readthedocs.io"
Repository = "https://github.com/nebulae-official/Orion.git"
Issues = "https://github.com/nebulae-official/Orion/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["ALL"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
    "snakeviz>=2.2.2",
]
docs = [
    "mkdocs-git-revision-date-localized-plugin>=1.4.4",
    "mkdocs-material>=9.6.7",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings>=0.28.2",
    "mkdocstrings-python>=1.16.2",
]
